# living-web-chromium

./: .gitignore  CMakeLists.txt  README.md  SPEC_COMPLIANCE.md  integrate.sh
.github/workflows/: build.yml
content/browser/did/: BUILD.gn  did_credential.h  did_key_provider.cc  did_key_provider.h  signing_service.cc  signing_service.h
content/browser/graph/: BUILD.gn  graph_host.cc  graph_host.h  graph_manager.cc  graph_manager.h  graph_store.cc  graph_store.h  sparql_engine.cc  sparql_engine.h  triple.cc  triple.h
content/browser/graph_governance/: BUILD.gn  content_validator.h  governance_engine.cc  governance_engine.h  scope_resolver.h  temporal_engine.h  zcap_verifier.h
content/browser/graph_sync/: BUILD.gn  crdt_engine.h  peer_manager.h  shared_graph_host.cc  shared_graph_host.h  sync_service.cc  sync_service.h
e2e/: package-lock.json  package.json  playwright.config.ts  run.sh
e2e/fixtures/: start-relay.ts
e2e/helpers/: setup.ts
e2e/test-pages/: index.html  polyfill-bundle.js  sync-test.html
e2e/tests/: governance.spec.ts  graph-sync.spec.ts  group-identity.spec.ts  identity.spec.ts  personal-graph.spec.ts  shapes.spec.ts  sync-module-loading.spec.ts  sync-multi-tab.spec.ts  sync-websocket.spec.ts
mojo/public/mojom/graph/: BUILD.gn  graph.mojom  graph_governance.mojom  graph_sync.mojom
standalone/: base_shim.h  crypto_sha2.h  did_key_provider.h  governance_engine.h  graph_store.cc  graph_store.h  json_parser.h  living_web_tests.cc  sparql_engine.h  sync_service.h  types.h
tests/: did_key_unittest.cc  governance_engine_unittest.cc  graph_store_unittest.cc
tests/web_platform_tests/graph/: governance-constraints.html  identity-create.html  personal-graph-basic.html  personal-graph-shapes.html  shared-graph-sync.html
