# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("did") {
  sources = [
    "did_credential.h",
    "did_key_provider.cc",
    "did_key_provider.h",
    "signing_service.cc",
    "signing_service.h",
  ]

  deps = [
    "//base",
    "//crypto",
    "//mojo/public/cpp/bindings",
    "//mojo/public/mojom/graph",
    "//third_party/boringssl",
  ]
}
