# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("graph") {
  sources = [
    "graph_host.cc",
    "graph_host.h",
    "graph_manager.cc",
    "graph_manager.h",
    "graph_store.cc",
    "graph_store.h",
    "sparql_engine.cc",
    "sparql_engine.h",
    "triple.cc",
    "triple.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//mojo/public/mojom/graph",
  ]
}
