# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("graph_sync") {
  sources = [
    "crdt_engine.h",
    "peer_manager.h",
    "shared_graph_host.cc",
    "shared_graph_host.h",
    "sync_service.cc",
    "sync_service.h",
  ]

  deps = [
    "//base",
    "//crypto",
    "//mojo/public/cpp/bindings",
    "//mojo/public/mojom/graph:graph_sync",
    "//content/browser/graph",
    "//content/browser/graph_governance",
  ]
}
